fix social buttons broken layout on mobile.

--- a/sass/contents-pane.sass
+++ b/sass/contents-pane.sass
@@ -92,10 +92,16 @@
                 min-height: 21px
 
                 .episode-twitter-share-button
-                    width: 90px
+                    box-sizing: border-box
+                    width: 15%
                     float: left
+
                 .episode-fb-like-button
-                    width: 20%
+                    box-sizing: border-box
+                    width: 35%
                     float: left
                     bottom: 5px
 
+                .episode-footer-clear
+                    clear: left
+                    display: block
